...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/tab_feed">

    <include app:graph="@navigation/tab_feed" />
    <include app:graph="@navigation/tab_search" />
    <include app:graph="@navigation/tab_notification" />
    <include app:graph="@navigation/tab_profile" />

</navigation>
